# tiled-parser

./: Cargo.toml  LICENSE  README.md
src/: attributes.rs  common.rs  error.rs  image.rs  layer.rs  lib.rs  map.rs  object.rs  properties.rs  tile.rs  tileset.rs  utils.rs  world.rs
src/test_data/: finite.tmx  flip.tmx  hex_map.tmx  hexagonal.tmx  infinite.tmx  isometric.tmx  isometric_staggered.tmx
src/test_data/tilesets/: collection.tsx  image_sources.txt  shape.tsx  vikings_of_midgard.tsx
