[package]
name = "tiled-parser"
version = "0.1.0"
edition = "2021"
description = "A simple set of parsers for .tmx and .tsx files created by Tiled"

[dependencies]
roxmltree = "0.19.0"
flate2 = { version = "1.0", optional = true }
zstd = { version = "0.13.0", optional = true }
base64 = "0.21"
thiserror = "1.0"
serde = { version = "1.0.204", features = ["serde_derive"] }
serde_json = "1.0.122"

[features]
default = ["flate2", "zstd"]
flate2 = ["dep:flate2"]
zstd = ["dep:zstd"]
